# linker

./: Cargo.toml  README.md
.cargo/: config.toml
.sqlx/: query-4476a9c6d49ac5b1b486f5d87e2687cd5b5800195748a81849b4594dc0bf2893.json  query-828cd28859d923751e8c518c53726df69f83a7756f4bfefd6d208ecb2c344c9a.json  query-8df76546708d93b5f22f7d587378e182b9a0f633619aa2c98eef9b9ef045a0df.json  query-ae56bf56854a25e0982cf910a48a879cad738664e02f2a020cba8885e7201498.json  query-d0a2ba799fec118fe0c5bed3a9fd4fe0136fec9f62f2b3e90e27a0f4e69c6b8c.json  query-e1545d1e0fcefdda6d8f1c3a073ced13e53e2139d5cb07e0a17e1a3ac51e18f8.json  query-ea8e7b0512b68b78a3331c3ed56ec0865bf04d9be91f415c6e5d905a4955de53.json
migrations/: 20231107104223_init.sql  20231110075638_add_hidden_field.sql
src/: handlers.rs  lib.rs  main.rs  metrics.rs  server.rs  slug.rs
src/handlers/: shared.rs
src/server/: handlers.rs  metrics.rs  slug.rs
