[package]
name = "linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
arrayvec = { version = "0.7.4", features = ["serde"] }
axum = { version = "0.6.20", default-features = false, features = [
  "macros",
  "http1",
  "form",
  "tokio",
  "tracing",
] }
color-eyre = "0.6.2"
futures-util = { version = "0.3.29", default-features = false, features = ["std", "async-await"] }
mimalloc = "0.1.39" # marginal performance improvement
moka = { version = "0.12.1", features = ["sync"] }
prometheus-client = "0.22.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", default-features = false, features = [
  "macros",
  "migrate",
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
tokio = { version = "1.34.0", features = ["rt"] }
tower-http = { version = "0.4.4", features = ["cors", "limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "time"] }
url = { version = "2.4.1", features = ["serde"] }

# Speeds up debug builds considerably.
[profile.dev]
debug = "none"

# Include *some* debug info in release builds.
[profile.release]
debug = "limited"

[profile.dist]
inherits = "release"
lto = true
